tests/ui/closures/closure-no-copy-mut-env.stderr
error[E0382]: use of moved value: `hello`
  --> $DIR/closure-no-copy-mut-env.rs:10:13
   |
LL |     let b = hello;
   |             ----- value moved here
LL |     let c = hello;
   |             ^^^^^ value used here after move
   |
note: closure cannot be moved more than once as it is not `Copy` due to moving the variable `a` out of its environment
  --> $DIR/closure-no-copy-mut-env.rs:6:9
   |
LL |         a += 1;
   |         ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
